[tool.poetry]
name = "python-for-learning"
version = "0.1.0"
description = ""
authors = ["River Kim <bluuminn@gmail.com>"]
readme = "README.md"
packages = [{include = "python_for_learning"}]

[tool.poetry.dependencies]
python = "^3.11"
black = "^23.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
